# SierraAssessment

./: .gitignore  AttitudeControl.cpp  AttitudeControl.h  AttitudeControlMotor.cpp  AttitudeControlMotor.h  AttitudeSensor.cpp  AttitudeSensor.h  CMakeLists.txt  CommandAcceptor.h  CommandProcessor.cpp  CommandProcessor.h  Main.cpp  MockSpaceAxis.cpp  MockSpaceAxis.h  README.md  ReadInterface.h  WriteInterface.h
scripts/: configure.sh
